exports[`HtmlStringRootProvider > render > should render virtual DOM to HTML string 1`] = `
[
  [
    "body",
    "<div data-id=\\"1\\" id=\\"test\\" class=\\"container\\" style=\\"width:100%;height:50px\\"><img data-id=\\"2\\" href=\\"./test.img\\"/>hello, world!</div>"
  ]
]
`;

exports[`HtmlStringRootProvider > update > should render patched virtual DOM to HTML string 1`] = `
[
  "body",
  "<div data-id=\\"1\\" id=\\"test\\" class=\\"container newClass\\" style=\\"display:inline-block;height:50px\\">New <img data-id=\\"2\\" href=\\"./test.img\\" style=\\"color:red\\"/>world~</div>"
]
`;
